2010-03-25 Riccardo Mottola <rmottola@users.sf.net>

	* Source/gsc/GSGState.m: import NSValue, include -> import
	* Source/xlib/XGGState.m: added missing imports
	
2010-03-24 Doug Simons <doug.simons@testplant.com>

	* Source/winlib/WIN32FontInfo.m: Include NSDebug.h for
	definition of NSDebugLLog().

2010-03-24 Doug Simons <doug.simons@testplant.com>

	* Source/win32/WIN32Server.m: Ignore duplicate mouse down
	events generated by first click in a window.

2010-03-19 Eric Wasylishen <ewasylishen@gmail.com>

	* Headers/win32/w32_movesize.h:
	* Source/win32/w32_movesize.m:
	* Source/win32/WIN32Server.m: Call displayIfNeeded on
	the window when WM_SIZING is recieved so windows redraw
	while being resized.

2010-03-19 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/WIN32Server.m: Report deltaX and deltaY
	for mouse move events, like OS X does.

2010-03-19 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/WIN32Server.m: Process WM_SYSKEYDOWN
	and WM_SYSKEYUP messages - these are delivered instead
	of normal WM_KEYDOWN and WM_KEYUP messages when the
	ALT key is presesd. (and also F10).
	
	This fixes NSAlternateKeyMask not being set.
	
2010-03-13 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/w32_GLcontext.m: Set the WS_DISABLED flag
	on the OpenGL subwindow so mouse/keyboard events get
	redirected to the parent window.
	Previously mouse/keyboard events were being eaten by
	the OpenGL subwindow - now they work as expected.

2010-03-13 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/w32_GLcontext.m:
	Make more than one NSOpenGLView in an application work.

	Win32GLContext was using the hDC stored in the pixel format
	object in a few places, instead of getting it from the
	Win32Subwindow object. 

2010-03-13 Eric Wasylishen <ewasylishen@gmail.com>

	* Headers/win32/WIN32Server.h: 
	* Source/win32/WIN32Server.m: Add support for horizontal 
	mousewheel scrolling

010-03-13 Eric Wasylishen <ewasylishen@gmail.com>
